--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Header -->
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header__container">
 
             <nav class="navigation">
@@ -50,18 +50,18 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </header> -->
     <main>
 
         <!-- Effective Solutions -->
 
-        <section class=" hero section">
+        <!-- <section class=" hero section">
             <div class="container">
                 <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="hero__btn" width="18px" height="18px" data-modal-open>Замовити
                     послугу</button>
             </div>
-        </section>
+        </section> -->
 
         <!-- Features -->
 
@@ -119,7 +119,7 @@
 
         <!-- Occupation -->
 
-        <section class="occupation section">
+        <!-- <section class="occupation section">
             <div class="container">
                 <h2 class="occupation__title">Чим ми займаємося</h2>
                 <ul class="occupation-list list">
@@ -157,7 +157,7 @@
                 </ul>
             </div>
 
-        </section>
+        </section> -->
 
 
 
@@ -323,7 +323,7 @@
             </div>
         </section>
 
-        <section class="clients section">
+        <!-- <section class="clients section">
             <h2 class="clients-title">Постійні клієнти</h2>
             <div class="container clients-box">
                 <ul class="clients-list list">
@@ -374,11 +374,11 @@
                 </ul>
             </div>
 
-        </section>
+        </section> -->
 
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer-container container ">
 
             <div class="footer-info">
@@ -453,9 +453,9 @@
             </div>
         </div>
 
-    </footer>
+    </footer> -->
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
 
             <button type="button" class="btn_close " data-modal-close>
@@ -527,7 +527,7 @@
 
             </form>
         </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
 </body>
 
